' DVG303 :: Objektorienterad design och programmering
' 860224 Jonas Sjöberg
' Högskolan i Gävle
' tel12jsg@student.hig.se
'
' Lab #1    Uppgift 3


@startuml
' ____________________________________________________________________________
' ____ CONFIGURATION OPTIONS __________________________________________________
' debug flag creates a 'svek.dot' and 'svek.svg' file in ~/
!pragma svek_trace on

' package graphical style
skinparam packageStyle folder

' don't use symbols to indicate visibility
' skinparam classAttributeIconsize 0


' ____________________________________________________________________________
' ____ CLASS DEFINITIONS ______________________________________________________
package se.hig.oodp.lab.model {
    class Vertex2D {
        -x:double
        -y:double
        --
        +Vertex2D(x:double, y:double)
        ..
        +getX():double
        +getY():double
        +moveBy(dx:double, dy:double):Vertex2D
        +rotate(ref:Vertex2D, angle:double):Vertex2D
        +scale(ref:Vertex2D, x_factor:double, y_factor:double):Vertex2D
        +toString():String
    }
}

package se.hig.oodp.lab.model.simplefigure {
    abstract class SimpleFigure {
        #position:Vertex2D
        --
        SimpleFigure(position:Vertex2D)
        ..
        +moveBy(dx:double, dy:double)
        +getPosition():Vertex2D
    }

    class Point {
        Point(position:Vertex2D)
        ..
        +toString():String
    }

    class Circle {
        -radius:double
        --
        +Circle(position:Vertex2D, radius:double)
        ..
        +scale(factor:double)
        +getRadius():double
        +toString():String
    }

    class Ellipse {
        -width:double
        -height:double
        --
        +Ellipse(position:Vertex2D, width:double, height:double)
        ..
        +scale(xFactor:double, yFactor:double)
        +rotate(angle:double)
        +getWidth():double
        +getHeight():double
        +toString():String
    }

    ' NOTES
    ' ~~~~~
    note left of SimpleFigure
    Simpler figure consists of just
    one single point, the center.
    end note
}

package se.hig.oodp.lab.model.figure {
    interface Movable {
        +moveBy(dx:double, dy:double)
    }

    interface Rotatable {
        +rotate(angle:double)
    }

    interface Scalable {
        +scale(xFactor:double, yFactor:double)
    }

    abstract class Figure {
        +DEFAULT_X_COORD:double
        +DEFAULT_Y_COORD:double
'       #vertices:ArrayList<Vertex2D>
        --
        +Figure(center:Vertex2D)
        ..
        #addVerticesToList(newVertices:Vertex2D...)
        +rotate(angle:double)
        +scale(xFactor:double, yFactor:double)
        {abstract} +updateCenterPoint(xFactor:double, yFactor:double)
        +moveBy(dx:double, dy:double)
        +getCenter():Vertex2D
        +getVertex(n:int):Vertex2D
    }

    class Line {
        -v0:Vertex2D
        -v1:Vertex2D
        --
        +Line(v0:Vertex2D, v1:Vertex2D)
        ..
        -updateCenterPoint()
        +toString():String
    }

    class Triangle {
        -v0:Vertex2D
        -v1:Vertex2D
        -v2:Vertex2D
        -width:double
        -height:double
        --
        +Triangle(center:Vertex2D, width:double, height:double)
        +Triangle(v0:Vertex2D, v1:Vertex2D, v2:Vertex2D)
        ..
        -calculateVerticesFromCenter()
        +calculateCenterPoint(xFactor:double, yFactor:double)
        +toString():String
        +updateCenterPoint(xFactor:double, yFactor:double)
    }

    class Polygon {
        +Polygon(center:Vertex2D, vertices:Vertex2D...)
        ..
        +scale(Factor:double, yFactor:double)
        +toString():String
    }

    class Rectangle {
        -v0:Vertex2D
        -v1:Vertex2D
        -v3:Vertex2D
        -v3:Vertex2D
        -width:double
        -height:double
        --
        +Rectangle(center:Vertex2D, width:double, height:double)
        +Rectangle(v0:Vertex2D, v1:Vertex2D, v2:Vertex2D, v3:Vertex2D)
        ..
        -calculateVerticesFromCenter()
        -updateCenterPoint(xFactor:double, yFactor:double)
        -calculateWidth()
        -calculateHeight()
        +toString():String
    }

    class Square {
        -v0:Vertex2D
        -v1:Vertex2D
        -v3:Vertex2D
        -v3:Vertex2D
        -sideLength:double
        --
        +Square(center:Vertex2D, side:double)
        ..
        -updateCenterPoint()
        -calculateVerticesFromCenter()
        +toString():String
    }

    ' NOTES
    ' ~~~~~
    note right of Figure
    Figure consists of
    any number of points.
    end note
}


'' ____________________________________________________________________________
'' ____ PACKAGE HIERARCHY _____________________________________________________
''+-- figure
''+-- simplefigure
'
'
'' ____________________________________________________________________________
'' ____ RELATIONS BETWEEN CLASSES _____________________________________________
'' <|--      extension
'' *--       composition
'' o--       aggregation
'
'
'' COMPOSITION
'' ~~~~~~~~~~~
'Figure       "1" *-- "many" Vertex2D : contains
'SimpleFigure "1" *-- "1"    Vertex2D : contains
'
'
'' INHERITANCE
'' ~~~~~~~~~~~
'SimpleFigure <|-- Figure
'
'SimpleFigure <|-- Point
'SimpleFigure <|-- Circle
'SimpleFigure <|-- Ellipse
'
'Figure <|-- Line
'Figure <|-- Triangle
'Figure <|-- Polygon
'Figure <|-- Rectangle
'Figure <|-- Square


'' IMPLEMENT INTERFACES
'' ~~~~~~~~~~~~~~~~~~~~
'Movable <.. Figure
'Movable <.. SimpleFigure
'
'Rotatable <.. Figure
'
'Scalable <.. Figure
'Scalable <.. Circle
'Scalable <.. Ellipse



' BELOW GENERATED BY "plantuml-dependency-cli-1.4.0-jar-with-dependencies.jar"

Figure  --|> SimpleFigure
Point   --|> SimpleFigure
Circle  --|> SimpleFigure
Ellipse --|> SimpleFigure

Figure       ..|> Movable
SimpleFigure ..|> Movable

Figure  ..|> Rotatable
Ellipse ..|> Rotatable

Figure       ..|> Scalable
Circle       ..|> Scalable
Ellipse      ..|> Scalable

Line      --|> Figure
Polygon   --|> Figure
Rectangle --|> Figure
Square    --|> Figure
Triangle  --|> Figure

'Figure       ..> Vertex2D
'SimpleFigure ..> Vertex2D
'Line         ..> Vertex2D
'Rectangle    ..> Vertex2D
'Square       ..> Vertex2D
'Triangle     ..> Vertex2D
'Circle       ..> Vertex2D
'Ellipse      ..> Vertex2D
'Point        ..> Vertex2D
@enduml
